Hibernate Jpa testing and unit testing for RawImportFile and RawTransaction. Added application-test.properties for the purpose of removing extra console output with Hibernate DB inserts.